--- a/estilos/mediaquery.css
+++ b/estilos/mediaquery.css
@@ -1,34 +1,39 @@
+@media screen and (max-width: 767px) {    
+    /* Mobile responsive */
 
-/* Media Queries */
-@media only screen and (max-width: 768px) {
-    .header-botao-esquerdo,
-    .header-botao-direito {
-        margin-left: 20px;
+    
+    .flex{
+        flex-direction: column;
     }
-}
 
-@media only screen and (max-width: 480px) {
-    .header-botao-esquerdo {
-        margin-left: 10px;
-        margin-top: 50px;
+    body,html {
+        width: 100%;
+        overflow-x: hidden;
     }
     
-    .header-botao-esquerdo h2 {
-        font-size: 2rem;
-        margin-bottom: 10px;
+
+    /* Header */
+
+    .logo {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+    }
+
+    .logo h1 {
+        border-bottom: 2px solid black; 
+        padding-bottom: 10px; 
+    }
+
+    .botao-abrir-menu i{
+        display:block;
     }
     
-    .header-botao-esquerdo p {
-        margin-bottom: 10px;
+
+    .menu{
+        display: none;
     }
-    
-    .header-botao-esquerdo button {
-        padding: 0.6rem 2.8rem;
-        margin-bottom: 10px;
-        font-size: 0.9rem;
-    }
-    
-    .header-botao-direito img {
-        width: 200px;
-    }
+
 }
+  
