--- a/estilos/style.css
+++ b/estilos/style.css
@@ -27,7 +27,7 @@ body {
 header{
     padding: 40px ;
     padding-left:30px;
-    background: orange;
+    background: rgba(255, 166, 0, 0.722);
     
 }
 
@@ -40,6 +40,7 @@ header > .interface{
 
 header h1 {
     color: blueviolet;
+    font-weight: 600;
 }
 
 header a {
@@ -139,79 +140,86 @@ header nav li {
 
 /* Main */
 
-/* Estilos para o resumo do site */
+
 .resumo {
-    background-color: #f9f9f9; /* Cor de fundo do resumo */
-    padding: 50px 0; /* Espaçamento interno do resumo */
-    text-align: center; /* Centraliza o conteúdo do resumo */
+    background-color: rgba(137, 43, 226, 0.404); 
+    padding: 50px 0; 
+    text-align: center; 
 }
 
 .resumo .container {
-    max-width: 1200px; /* Largura máxima do contêiner do resumo */
-    margin: auto; /* Centraliza o contêiner do resumo */
+    max-width: 1200px; 
+    margin: auto; 
+    padding-bottom: 120px;
 }
 
 .resumo h1 {
-    color: #333; /* Cor do título do resumo */
-    font-size: 2.5rem; /* Tamanho do título do resumo */
-    margin-bottom: 20px; /* Espaçamento abaixo do título do resumo */
+    color: rgba(0, 0, 0, 0.766);
+    font-size: 3rem; 
+    font-weight: 600;
+    margin-bottom: 60px; 
 }
 
 .resumo p {
-    color: #666; /* Cor do texto do resumo */
-    font-size: 1.2rem; /* Tamanho do texto do resumo */
-    margin-bottom: 20px; /* Espaçamento abaixo do texto do resumo */
+    color: #666; 
+    font-size: 1.4rem; 
+    margin-bottom: 60px; 
 }
 
 .resumo .btn {
     display: inline-block; /* Permite que o botão ocupe apenas o espaço necessário */
-    background-color: #007bff; /* Cor de fundo do botão */
-    color: #fff; /* Cor do texto do botão */
-    padding: 10px 20px; /* Espaçamento interno do botão */
-    text-decoration: none; /* Remove o sublinhado padrão dos links */
-    border-radius: 5px; /* Borda arredondada do botão */
+    background-color: #007bff; 
+    color: #fff; 
+    padding: 10px 40px; 
+    text-decoration: none; 
+    border-radius: 10px;
 }
 
 .resumo .btn:hover {
-    background-color: #0056b3; /* Cor de fundo do botão ao passar o mouse */
+    background-color: #0056b3; 
 }
 
 
 
-section {
-    padding: 50px 0; /* Adiciona um espaçamento interno nas seções */
+section#destaques {
+    padding: 50px 0; 
+    padding-bottom:50px;
+    background-color: rgba(255, 166, 0, 0.722);
 }
 
-.container {
+section#destaques .container {
     max-width: 1200px;
     margin: auto;
-    padding: 0 20px; /* Adiciona um espaçamento interno nas seções */
+    padding: 0 20px;
 }
 
-h2 {
-    color: #333; /* Cor do título */
-    text-align: center; /* Centraliza o título */
-    margin-bottom: 30px; /* Adiciona espaço abaixo do título */
+section#destaques h2 {
+    color: #333; 
+    text-align: center; 
+    margin-bottom: 30px; 
+    font-weight: 600;
+    font-size: 2rem;
 }
+
+
 
 /* Estilos para os produtos */
 
-/* Estilos para os produtos em destaque */
+
 
 .produtos {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between; /* Distribui os produtos igualmente na linha */
-    gap: 30px; /* Adiciona espaçamento entre os produtos */
+    justify-content: space-between; 
+    gap: 30px; 
 }
 
 .produto {
     width: calc(33.33% - 20px); /* Largura dos produtos */
-    text-align: center; /* Centraliza o conteúdo do produto */
-    border: 1px solid rgba(0, 0, 0, 0.562); /* Adiciona uma borda */
-    border-radius: 8px; /* Arredonda as bordas */
-    padding: 30px; /* Adiciona um espaçamento interno */
-    box-sizing: border-box; /* Considera a borda e o preenchimento como parte do tamanho total */
+    text-align: center; 
+    border: 1px solid rgba(0, 0, 0, 0.562);
+    border-radius: 8px; 
+    padding: 30px; 
     padding-bottom: 10px;
 }
 
@@ -220,13 +228,14 @@ h2 {
 }
 
 .produto img {
+    /* width: 300px; */
     max-width: 100%; /* Garante que a imagem não ultrapasse a largura do contêiner */
     height: auto; /* Permite que a altura da imagem seja ajustada automaticamente */
-    margin-bottom: 15px; /* Adiciona espaço abaixo da imagem */
+    margin-bottom: 15px; 
 }
 
 .produto h3 {
-    margin-bottom: 10px; /* Adiciona espaço abaixo do título */
+    margin-bottom: 10px; 
 }
 
 .produto p {
@@ -235,17 +244,17 @@ h2 {
 }
 
 .produto .preco {
-    font-weight: bold; /* Deixa o preço em negrito */
-    color: #333; /* Cor do preço */
+    font-weight: bold; 
+    color: #333; 
 }
 
 .produto button {
-    background-color: #007bff; /* Cor de fundo do botão */
-    color: #fff; /* Cor do texto do botão */
-    border: none; /* Remove a borda do botão */
-    padding: 10px 20px; /* Adiciona um espaçamento interno no botão */
-    cursor: pointer; /* Muda o cursor para indicar que o botão é clicável */
-    border-radius: 5px; /* Borda arredondada do botão */
+    background-color: #007bff; 
+    color: #fff; 
+    border: none; 
+    padding: 10px 20px; 
+    cursor: pointer; 
+    border-radius: 8px; 
     font-weight: 600;
     margin-top: 10px;
 }
@@ -254,52 +263,69 @@ h2 {
     background-color: #0056b3; 
 }
 
+.produto p#precoalt {
+    margin-top: 30px;
+    font-size: 0.6rem;
+}
+
+section#novidades {
+    padding: 50px 30px;
+}
+
+section#novidades h2 {
+    color: #333; 
+    text-align: center; 
+    margin-bottom: 30px; 
+    padding-top: 40px;
+    font-weight: 600;
+    font-size: 2rem;
+}
+
 
 #recado {
-    background-color: #f9f9f9; /* Cor de fundo */
-    padding: 50px 0; /* Espaçamento interno */
-    text-align: center; /* Centraliza o conteúdo */
+    background-color: #f9f9f9;
+    padding: 50px 0; 
+    text-align: center; 
 }
 
 #recado .container {
-    max-width: 800px; /* Largura máxima do contêiner */
-    margin: auto; /* Centraliza o contêiner */
+    max-width: 800px; 
+    margin: auto;
 }
 
 #recado h2 {
-    color: #333; /* Cor do título */
-    margin-bottom: 20px; /* Espaçamento abaixo do título */
+    color: #333; 
+    margin-bottom: 20px; 
 }
 
 #recado p {
-    color: #666; /* Cor do texto */
-    font-size: 1.1rem; /* Tamanho da fonte */
-    margin-bottom: 20px; /* Espaçamento abaixo do texto */
+    color: #666; 
+    font-size: 1.1rem; 
+    margin-bottom: 20px;
 }
 
 #recado ul {
-    list-style: none; /* Remove a marcação da lista */
-    padding: 0; /* Remove o preenchimento padrão da lista */
-    display: flex; /* Exibe os itens da lista em linha */
-    justify-content: center; /* Centraliza os itens horizontalmente */
+    list-style: none; 
+    display: flex; 
+    justify-content: center; 
 }
 
 #recado ul li {
-    margin: 0 10px; /* Espaçamento entre os itens da lista */
+    margin: 0 10px; 
 }
 
 #recado ul li a {
-    color: #007bff; /* Cor do link */
-    text-decoration: none; /* Remove o sublinhado padrão do link */
-    padding: 10px 20px; /* Espaçamento interno dos links */
-    border: 1px solid #007bff; /* Adiciona uma borda ao redor dos links */
-    border-radius: 5px; /* Borda arredondada */
-    transition: background-color 0.3s, color 0.3s; /* Transição suave de cores */
+    color: #007bff; 
+    text-decoration: none; 
+    padding: 10px 20px; 
+    border: 1px solid #007bff; 
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
 }
 
 #recado ul li a:hover {
-    background-color: #007bff; /* Cor de fundo ao passar o mouse */
-    color: #fff; /* Cor do texto ao passar o mouse */
+    background-color: #007bff; 
+    color: #fff; 
 }
 
 
