--- a/estilos/style.css
+++ b/estilos/style.css
@@ -167,12 +167,17 @@ header nav li {
 }
 
 .resumo .btn {
+    font-size: large;
     display: inline-block; /* Permite que o botão ocupe apenas o espaço necessário */
     background-color: #007bff; 
     color: #fff; 
     padding: 10px 40px; 
     text-decoration: none; 
     border-radius: 10px;
+    border: none;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.295);
+    cursor: pointer;
+    
 }
 
 .resumo .btn:hover {
@@ -191,6 +196,7 @@ section#destaques .container {
     max-width: 1200px;
     margin: auto;
     padding: 0 20px;
+    text-align: center;
 }
 
 section#destaques h2 {
@@ -271,6 +277,13 @@ section#destaques h2 {
     font-size: 0.6rem;
 }
 
+section#novidades .container {
+    max-width: 1200px;
+    margin: auto;
+    padding: 0 20px;
+    text-align: center;
+}
+
 section#novidades {
     padding: 50px 30px;
     background-color:lightgray;
@@ -283,6 +296,12 @@ section#novidades h2 {
     padding-top: 40px;
     font-weight: 600;
     font-size: 2rem;
+}
+
+section#novidades button{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
